Add advanced traps, fog effects, and enemy behaviors

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <span id="status-attack" class="status">攻撃: <span class="value">-</span></span>
             <span id="status-invincible" class="status">無敵: <span class="value">-</span></span>
             <span id="status-trap" class="status">罠効果: <span class="value">-</span></span>
+            <span id="status-field" class="status">環境: <span class="value">-</span></span>
           </div>
           <button id="pause-button">⏸ ポーズ</button>
         </div>
