--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div id="app">
-    <header class="top-bar">
+    <canvas id="game-canvas" width="480" height="640" aria-label="迷路ゲーム"></canvas>
+    <div id="touch-layer" aria-hidden="true"></div>
+
+    <header class="top-bar overlay-block">
       <h1 class="game-title">迷路アクション 私と敵</h1>
       <div class="top-controls">
         <button id="toggle-sound" aria-pressed="false">🔊 音ON</button>
@@ -17,90 +20,105 @@
       </div>
     </header>
 
-    <main>
-      <section id="game-screen" aria-live="polite">
-        <div class="hud">
-          <div>レベル: <span id="hud-level">1</span></div>
-          <div>スコア: <span id="hud-score">0</span></div>
-          <div class="status-strip">
-            <span id="status-attack" class="status">攻撃: <span class="value">-</span></span>
-            <span id="status-invincible" class="status">無敵: <span class="value">-</span></span>
-            <span id="status-trap" class="status">罠効果: <span class="value">-</span></span>
-            <span id="status-field" class="status">環境: <span class="value">-</span></span>
-          </div>
-          <button id="pause-button">⏸ ポーズ</button>
+    <section id="game-screen" class="overlay-block" aria-live="polite">
+      <div class="hud">
+        <div>レベル: <span id="hud-level">1</span></div>
+        <div>スコア: <span id="hud-score">0</span></div>
+        <div class="status-strip">
+          <span id="status-attack" class="status">攻撃: <span class="value">-</span></span>
+          <span id="status-invincible" class="status">無敵: <span class="value">-</span></span>
+          <span id="status-trap" class="status">罠効果: <span class="value">-</span></span>
+          <span id="status-field" class="status">環境: <span class="value">-</span></span>
+          <span id="status-dash" class="status">ダッシュ: <span class="value">Ready</span></span>
+          <span id="status-smoke" class="status">スモーク: <span class="value">0</span></span>
         </div>
-        <div class="canvas-wrapper">
-          <canvas id="game-canvas" width="480" height="640" aria-label="迷路ゲーム"></canvas>
-          <div id="loading-indicator" class="canvas-overlay">生成中…</div>
-          <div id="pause-overlay" class="canvas-overlay hidden">ポーズ中</div>
-        </div>
-        <div id="virtual-pad" aria-hidden="true">
-          <div class="pad-row">
-            <button data-dir="up" class="pad-btn" aria-label="上">▲</button>
-          </div>
-          <div class="pad-row">
-            <button data-dir="left" class="pad-btn" aria-label="左">◀</button>
-            <button data-dir="down" class="pad-btn" aria-label="下">▼</button>
-            <button data-dir="right" class="pad-btn" aria-label="右">▶</button>
-          </div>
-        </div>
-      </section>
+        <button id="pause-button">⏸ ポーズ</button>
+      </div>
+      <div id="loading-indicator" class="canvas-overlay">生成中…</div>
+      <div id="pause-overlay" class="canvas-overlay hidden">ポーズ中</div>
+    </section>
 
-      <section id="title-screen" class="overlay-panel" aria-live="polite">
-        <div class="panel">
-          <h2>タイトル</h2>
-          <p>プレイヤー <span class="symbol">私</span> を操作して、<span class="symbol enemy">敵</span> を避けながらゴールを目指そう。</p>
-          <button id="start-button" class="primary">▶ はじめる</button>
-          <button id="show-howto">❔ 操作説明</button>
-          <div id="howto" class="hidden">
-            <p>PC: 矢印キー / WASD</p>
-            <p>スマホ: 画面下のDパッド、またはスワイプ</p>
-            <p>一時停止: Pキー / ⏸ボタン</p>
-            <p>デバッグ: G=グリッド V=フォグ L=次レベル</p>
-          </div>
-        </div>
-      </section>
+    <div id="ability-buttons" class="overlay-block">
+      <button id="dash-button" class="ability-btn" aria-label="ダッシュ">⚡ ダッシュ</button>
+      <button id="smoke-button" class="ability-btn" aria-label="スモーク">💨 スモーク</button>
+    </div>
 
-      <section id="result-screen" class="overlay-panel hidden" aria-live="polite">
-        <div class="panel">
-          <h2>リザルト</h2>
-          <p>スコア: <span id="result-score">0</span></p>
-          <p>到達レベル: <span id="result-level">1</span></p>
-          <p>クリアタイム: <span id="result-time">0.0</span>s</p>
-          <form id="result-form">
-            <label>イニシャル (3文字)
-              <input id="initial-input" maxlength="3" pattern="[A-Za-zぁ-んァ-ヶ一-龥0-9]{1,3}" required />
-            </label>
-            <button type="submit" class="primary">保存</button>
-          </form>
-          <button id="retry-button">▶ もう一度</button>
-          <button id="back-title">◀ タイトルへ</button>
-        </div>
-      </section>
+    <div id="virtual-pad" class="floating-pad" data-state="full" aria-hidden="false">
+      <div class="pad-row">
+        <button data-dir="up" class="pad-btn" aria-label="上">▲</button>
+      </div>
+      <div class="pad-row">
+        <button data-dir="left" class="pad-btn" aria-label="左">◀</button>
+        <button data-dir="down" class="pad-btn" aria-label="下">▼</button>
+        <button data-dir="right" class="pad-btn" aria-label="右">▶</button>
+      </div>
+    </div>
 
-      <section id="ranking-panel" class="dialog hidden" role="dialog" aria-modal="true">
-        <div class="panel">
-          <h2>ランキング</h2>
-          <ol id="ranking-list"></ol>
-          <button id="reset-ranking">初期化</button>
-          <button id="close-ranking" class="secondary">閉じる</button>
-        </div>
-      </section>
+    <button id="pad-toggle" class="pad-toggle" aria-label="Dパッド切替" data-state="full">🕹</button>
 
-      <section id="settings-panel" class="dialog hidden" role="dialog" aria-modal="true">
-        <div class="panel">
-          <h2>設定</h2>
-          <label>視界半径: <input id="sight-range" type="range" min="3" max="10" value="5" /></label>
-          <label>Dパッドサイズ: <input id="pad-size" type="range" min="80" max="200" value="140" /></label>
-          <label>スワイプ感度: <input id="swipe-sensitivity" type="range" min="10" max="80" value="30" /></label>
-          <label>震動: <input id="vibration-toggle" type="checkbox" checked /></label>
-          <label>画面揺れ: <input id="screenshake-toggle" type="checkbox" checked /></label>
-          <label>フォグ表示: <input id="fog-toggle" type="checkbox" checked /></label>
-          <button id="close-settings" class="secondary">閉じる</button>
+    <div id="title-screen" class="overlay-panel" aria-live="polite">
+      <div class="panel">
+        <h2>タイトル</h2>
+        <p>プレイヤー <span class="symbol">私</span> を操作して、<span class="symbol enemy">敵</span> を避けながらゴールを目指そう。</p>
+        <button id="start-button" class="primary">▶ はじめる</button>
+        <button id="show-howto">❔ 操作説明</button>
+        <div id="howto" class="hidden">
+          <p>PC: 矢印キー / WASD</p>
+          <p>スマホ: 画面下のDパッド、またはスワイプ</p>
+          <p>ダッシュ: ⚡ボタン / Space</p>
+          <p>スモーク: 💨ボタン / Eキー</p>
+          <p>一時停止: Pキー / ⏸ボタン</p>
+          <p>デバッグ: G=グリッド V=フォグ L=次レベル</p>
         </div>
-      </section>
-    </main>
+      </div>
+    </div>
+
+    <section id="result-screen" class="overlay-panel hidden" aria-live="polite">
+      <div class="panel">
+        <h2>リザルト</h2>
+        <p>スコア: <span id="result-score">0</span></p>
+        <p>到達レベル: <span id="result-level">1</span></p>
+        <p>クリアタイム: <span id="result-time">0.0</span>s</p>
+        <form id="result-form">
+          <label>イニシャル (3文字)
+            <input id="initial-input" maxlength="3" pattern="[A-Za-zぁ-んァ-ヶ一-龥0-9]{1,3}" required />
+          </label>
+          <button type="submit" class="primary">保存</button>
+        </form>
+        <button id="retry-button">▶ もう一度</button>
+        <button id="back-title">◀ タイトルへ</button>
+      </div>
+    </section>
+
+    <section id="ranking-panel" class="dialog hidden" role="dialog" aria-modal="true">
+      <div class="panel">
+        <h2>ランキング</h2>
+        <ol id="ranking-list"></ol>
+        <button id="reset-ranking">初期化</button>
+        <button id="close-ranking" class="secondary">閉じる</button>
+      </div>
+    </section>
+
+    <section id="settings-panel" class="dialog hidden" role="dialog" aria-modal="true">
+      <div class="panel">
+        <h2>設定</h2>
+        <label>視界半径: <input id="sight-range" type="range" min="3" max="10" value="5" /></label>
+        <label>Dパッドサイズ: <input id="pad-size" type="range" min="80" max="200" value="140" /></label>
+        <label>スワイプ感度: <input id="swipe-sensitivity" type="range" min="10" max="80" value="30" /></label>
+        <label>震動: <input id="vibration-toggle" type="checkbox" checked /></label>
+        <label>画面揺れ: <input id="screenshake-toggle" type="checkbox" checked /></label>
+        <label>フォグ表示: <input id="fog-toggle" type="checkbox" checked /></label>
+        <button id="close-settings" class="secondary">閉じる</button>
+      </div>
+    </section>
+
+    <div id="tutorial-pop" class="tutorial hidden" role="status">
+      <div class="tutorial-body">
+        <h3>チュートリアル</h3>
+        <p>Dパッドは画面に重ねて表示されています。右下の🕹ボタンから縮小・非表示を切り替えできます。</p>
+        <button id="tutorial-close" class="primary">了解！</button>
+      </div>
+    </div>
   </div>
   <script src="main.js"></script>
 </body>
