--- a/index.html
+++ b/index.html
@@ -2,124 +2,86 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
-  <title>迷路アクション 私と敵</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+  <title>私と敵のローグ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="app">
-    <canvas id="game-canvas" width="480" height="640" aria-label="迷路ゲーム"></canvas>
-    <div id="touch-layer" aria-hidden="true"></div>
-
-    <header class="top-bar overlay-block">
-      <h1 class="game-title">迷路アクション 私と敵</h1>
-      <div class="top-controls">
-        <button id="toggle-sound" aria-pressed="false">🔊 音ON</button>
-        <button id="open-settings">⚙️ 設定</button>
-        <button id="open-ranking">🏆 ランキング</button>
-      </div>
+  <div id="game-wrapper">
+    <header id="status-bar">
+      <div class="status-item">階: <span id="ui-floor">1F</span></div>
+      <div class="status-item">HP: <span id="ui-hp">20 / 20</span></div>
+      <div class="status-item">Lv/Exp: <span id="ui-level">1</span> / <span id="ui-exp">0</span></div>
+      <div class="status-item">満腹: <span id="ui-hunger">100%</span></div>
+      <div class="status-item">攻/防: <span id="ui-atk">1</span> / <span id="ui-def">0</span></div>
+      <div class="status-item">所持: <span id="ui-inventory">0 / 20</span></div>
     </header>
-
-    <section id="game-screen" class="overlay-block" aria-live="polite">
-      <div class="hud">
-        <div>レベル: <span id="hud-level">1</span></div>
-        <div>スコア: <span id="hud-score">0</span></div>
-        <div class="status-strip">
-          <span id="status-attack" class="status">攻撃: <span class="value">-</span></span>
-          <span id="status-invincible" class="status">無敵: <span class="value">-</span></span>
-          <span id="status-trap" class="status">罠効果: <span class="value">-</span></span>
-          <span id="status-field" class="status">環境: <span class="value">-</span></span>
-          <span id="status-dash" class="status">ダッシュ: <span class="value">Ready</span></span>
-          <span id="status-smoke" class="status">スモーク: <span class="value">0</span></span>
+    <canvas id="game-canvas" aria-label="ローグライクゲーム" role="img"></canvas>
+    <div id="message-log" aria-live="polite"></div>
+    <div id="dpad" class="dpad" data-size="full">
+      <div class="dpad-inner">
+        <button class="pad-btn" data-action="up" aria-label="上">▲</button>
+        <div class="pad-row">
+          <button class="pad-btn" data-action="left" aria-label="左">◀</button>
+          <button class="pad-btn" data-action="wait" aria-label="待機">•</button>
+          <button class="pad-btn" data-action="right" aria-label="右">▶</button>
         </div>
-        <button id="pause-button">⏸ ポーズ</button>
+        <button class="pad-btn" data-action="down" aria-label="下">▼</button>
       </div>
-      <div id="loading-indicator" class="canvas-overlay">生成中…</div>
-      <div id="pause-overlay" class="canvas-overlay hidden">ポーズ中</div>
-    </section>
-
-    <div id="ability-buttons" class="overlay-block">
-      <button id="dash-button" class="ability-btn" aria-label="ダッシュ">⚡ ダッシュ</button>
-      <button id="smoke-button" class="ability-btn" aria-label="スモーク">💨 スモーク</button>
+      <button id="pad-menu" class="pad-menu" aria-label="メニュー">≡</button>
     </div>
+    <button id="pad-toggle" class="pad-toggle" data-visibility="full" aria-label="Dパッド切替">🕹</button>
+  </div>
 
-    <div id="virtual-pad" class="floating-pad" data-state="full" aria-hidden="false">
-      <div class="pad-row">
-        <button data-dir="up" class="pad-btn" aria-label="上">▲</button>
-      </div>
-      <div class="pad-row">
-        <button data-dir="left" class="pad-btn" aria-label="左">◀</button>
-        <button data-dir="down" class="pad-btn" aria-label="下">▼</button>
-        <button data-dir="right" class="pad-btn" aria-label="右">▶</button>
-      </div>
-    </div>
-
-    <button id="pad-toggle" class="pad-toggle" aria-label="Dパッド切替" data-state="full">🕹</button>
-
-    <div id="title-screen" class="overlay-panel" aria-live="polite">
-      <div class="panel">
-        <h2>タイトル</h2>
-        <p>プレイヤー <span class="symbol">私</span> を操作して、<span class="symbol enemy">敵</span> を避けながらゴールを目指そう。</p>
-        <button id="start-button" class="primary">▶ はじめる</button>
-        <button id="show-howto">❔ 操作説明</button>
-        <div id="howto" class="hidden">
-          <p>PC: 矢印キー / WASD</p>
-          <p>スマホ: 画面下のDパッド、またはスワイプ</p>
-          <p>ダッシュ: ⚡ボタン / Space</p>
-          <p>スモーク: 💨ボタン / Eキー</p>
-          <p>一時停止: Pキー / ⏸ボタン</p>
-          <p>デバッグ: G=グリッド V=フォグ L=次レベル</p>
-        </div>
-      </div>
-    </div>
-
-    <section id="result-screen" class="overlay-panel hidden" aria-live="polite">
-      <div class="panel">
-        <h2>リザルト</h2>
-        <p>スコア: <span id="result-score">0</span></p>
-        <p>到達レベル: <span id="result-level">1</span></p>
-        <p>クリアタイム: <span id="result-time">0.0</span>s</p>
-        <form id="result-form">
-          <label>イニシャル (3文字)
-            <input id="initial-input" maxlength="3" pattern="[A-Za-zぁ-んァ-ヶ一-龥0-9]{1,3}" required />
-          </label>
-          <button type="submit" class="primary">保存</button>
-        </form>
-        <button id="retry-button">▶ もう一度</button>
-        <button id="back-title">◀ タイトルへ</button>
-      </div>
-    </section>
-
-    <section id="ranking-panel" class="dialog hidden" role="dialog" aria-modal="true">
-      <div class="panel">
-        <h2>ランキング</h2>
-        <ol id="ranking-list"></ol>
-        <button id="reset-ranking">初期化</button>
-        <button id="close-ranking" class="secondary">閉じる</button>
-      </div>
-    </section>
-
-    <section id="settings-panel" class="dialog hidden" role="dialog" aria-modal="true">
-      <div class="panel">
-        <h2>設定</h2>
-        <label>視界半径: <input id="sight-range" type="range" min="3" max="10" value="5" /></label>
-        <label>Dパッドサイズ: <input id="pad-size" type="range" min="80" max="200" value="140" /></label>
-        <label>スワイプ感度: <input id="swipe-sensitivity" type="range" min="10" max="80" value="30" /></label>
-        <label>震動: <input id="vibration-toggle" type="checkbox" checked /></label>
-        <label>画面揺れ: <input id="screenshake-toggle" type="checkbox" checked /></label>
-        <label>フォグ表示: <input id="fog-toggle" type="checkbox" checked /></label>
-        <button id="close-settings" class="secondary">閉じる</button>
-      </div>
-    </section>
-
-    <div id="tutorial-pop" class="tutorial hidden" role="status">
-      <div class="tutorial-body">
-        <h3>チュートリアル</h3>
-        <p>Dパッドは画面に重ねて表示されています。右下の🕹ボタンから縮小・非表示を切り替えできます。</p>
-        <button id="tutorial-close" class="primary">了解！</button>
+  <div id="menu-overlay" class="overlay hidden" role="dialog" aria-modal="true">
+    <div class="panel">
+      <h2>所持品</h2>
+      <ul id="inventory-list"></ul>
+      <div class="panel-buttons">
+        <button id="close-menu" class="secondary">閉じる</button>
       </div>
     </div>
   </div>
+
+  <div id="result-overlay" class="overlay hidden" role="dialog" aria-modal="true">
+    <div class="panel">
+      <h2>リザルト</h2>
+      <p>到達階: <span id="result-floor">1F</span></p>
+      <p>撃破数: <span id="result-kills">0</span></p>
+      <p>スコア: <span id="result-score">0</span></p>
+      <form id="result-form">
+        <label>名前(3文字まで)
+          <input id="result-name" maxlength="3" pattern="[A-Za-z0-9ぁ-んァ-ヶ一-龥]{1,3}" required />
+        </label>
+        <button type="submit" class="primary">ランキング登録</button>
+      </form>
+      <button id="retry-button" class="primary">再挑戦</button>
+      <button id="ranking-button">ランキングを見る</button>
+    </div>
+  </div>
+
+  <div id="ranking-overlay" class="overlay hidden" role="dialog" aria-modal="true">
+    <div class="panel">
+      <h2>ランキング</h2>
+      <ol id="ranking-list"></ol>
+      <div class="panel-buttons">
+        <button id="reset-ranking" class="danger">リセット</button>
+        <button id="close-ranking" class="secondary">閉じる</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="tutorial" class="overlay" role="dialog" aria-modal="true">
+    <div class="panel">
+      <h2>遊び方</h2>
+      <p>画面下のDパッド、スワイプ、またはキーボード(矢印/WASD/スペース)で行動します。</p>
+      <p>1行動ごとに敵も行動します。階段で降りてより深い階層を目指しましょう。</p>
+      <button id="tutorial-close" class="primary">開始</button>
+    </div>
+  </div>
+
+  <div id="toast" class="toast" aria-live="assertive"></div>
+
   <script src="main.js"></script>
 </body>
 </html>
