Implement mobile pad dock quickslots

--- a/index.html
+++ b/index.html
@@ -145,6 +145,24 @@
     <button id="pad-handle" type="button" aria-label="操作ドックを表示"></button>
     <div class="dock-inner">
       <div id="reach-guide" aria-hidden="true"></div>
+      <div id="quickslot-bar" role="toolbar" aria-label="クイックスロット">
+        <button class="quickslot empty" type="button" data-slot="0">
+          <span class="quickslot-icon">+</span>
+          <span class="quickslot-label"></span>
+        </button>
+        <button class="quickslot empty" type="button" data-slot="1">
+          <span class="quickslot-icon">+</span>
+          <span class="quickslot-label"></span>
+        </button>
+        <button class="quickslot empty" type="button" data-slot="2">
+          <span class="quickslot-icon">+</span>
+          <span class="quickslot-label"></span>
+        </button>
+        <button class="quickslot empty" type="button" data-slot="3">
+          <span class="quickslot-icon">+</span>
+          <span class="quickslot-label"></span>
+        </button>
+      </div>
       <div id="thumb-zone">
         <div id="dpad" class="dpad" data-size="M">
           <div class="pad-row pad-row-up">
